Create Acaraje and Bombocado recipe pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Dudu doing Recipes</h1>
-        <a href="strogonoff.html">Strogonoff</a>
+        <ul>
+            <li><a href="strogonoff.html">Strogonoff</a></li>
+            <li><a href="acaraje.html">Acarajé</a></li>
+            <li><a href="bombocado.html">Bombocado</a></li>
+        </ul>
+        
     </body>
 </html>
